--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -130,6 +130,7 @@ main {
 
 .container .profile-data .repositories ul{
   display: flex;
+  /* gap: 10px; */
   flex-wrap: wrap;
   justify-content: center;
 }
@@ -146,6 +147,14 @@ main {
 .container .profile-data .repositories ul li a:hover{
   background-color:hotpink;
   color: #fff
+}
+
+.container .profile-data .repositories ul li .status {
+  background-color: rgb(168, 82, 255);
+  color: #ffffff;
+  padding: 20px;
+  margin: 0 20px 20px;
+  border-radius: 7px;
 }
 
 .container .profile-data.hide{
