--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -149,12 +149,14 @@ main {
   color: #fff
 }
 
-.container .profile-data .repositories ul li .status {
+.container .profile-data .repositories ul li .status li {
   background-color: rgb(168, 82, 255);
   color: #ffffff;
-  padding: 20px;
-  margin: 0 20px 20px;
+  padding: 10px;
+  margin: 0 20px 10px;
   border-radius: 7px;
+  /* display: flex;
+  flex-direction: column; */
 }
 
 .container .profile-data.hide{
