--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -130,7 +130,6 @@ main {
 
 .container .profile-data .repositories ul{
   display: flex;
-  /* gap: 10px; */
   flex-wrap: wrap;
   justify-content: center;
 }
@@ -159,6 +158,7 @@ main {
 
 .list-events {
   background-color: rgb(188, 188, 188);
+  padding: 10px;
 }
 
 .list-events .events {
