--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -11,7 +11,7 @@ img {
 }
 
 body {
-  background-color:#24292e;
+  background-color:#141c2f;
   font-family: "Kumbh Sans", sans-serif;  
   text-align: center;    
   padding-bottom: 100px;
@@ -21,7 +21,8 @@ main {
   display: flex;  
   justify-content: center;
   flex-direction: column;
-  padding: 50px 0 0;      
+  padding: 50px 0 0;
+  color: #fff;
 }
 
 .devicon-github-original{
@@ -38,7 +39,7 @@ main {
   width: 60%;
   max-width: 960px;
   box-shadow: rgba(0, 0, 0, 0.3) 0px 25px 50px -12px;
-  background-color: #fff;
+  background-color: #1f2a48;
   display: flex;
   flex-direction: column;
   align-items: center;
